--- a/TermProject_Template/TermProject_Template.csproj
+++ b/TermProject_Template/TermProject_Template.csproj
@@ -79,16 +79,16 @@
     <Content Include="fonts\montserrat\OFL.txt" />
     <Content Include="fonts\raleway\OFL.txt" />
     <Content Include="fonts\ubuntu\UFL.txt" />
-    <Content Include="ForgotPassword.aspx" />
+    <Content Include="LogRegRes\ForgotPassword.aspx" />
     <Content Include="images\icons\favicon.ico" />
     <Content Include="images\icons\icon-google.png" />
     <Content Include="images\icons\map-marker.png" />
     <Content Include="images\icons\symbol-01.png" />
     <Content Include="images\Temple-T.png" />
     <Content Include="js\main.js" />
-    <Content Include="MerchantRegristration.aspx" />
-    <Content Include="UserLogin.aspx" />
-    <Content Include="UsersRegristration.aspx" />
+    <Content Include="Merchant\MerchantRegristration.aspx" />
+    <Content Include="LogRegRes\UserLogin.aspx" />
+    <Content Include="LogRegRes\UsersRegristration.aspx" />
     <Content Include="vendor\animate\animate.css" />
     <Content Include="vendor\animsition\css\animsition.css" />
     <Content Include="vendor\animsition\css\animsition.min.css" />
@@ -120,55 +120,69 @@
     <Content Include="vendor\select2\select2.min.css" />
     <Content Include="vendor\select2\select2.min.js" />
     <Content Include="Web.config" />
-    <Content Include="ResetPassword.aspx" />
+    <Content Include="LogRegRes\ResetPassword.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ForgotPassword.aspx.cs">
+    <Compile Include="LogRegRes\ForgotPassword.aspx.cs">
       <DependentUpon>ForgotPassword.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ForgotPassword.aspx.designer.cs">
+    <Compile Include="LogRegRes\ForgotPassword.aspx.designer.cs">
       <DependentUpon>ForgotPassword.aspx</DependentUpon>
     </Compile>
-    <Compile Include="MasterLogReg.Master.cs">
+    <Compile Include="LogRegRes\MasterLogReg.Master.cs">
       <DependentUpon>MasterLogReg.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="MasterLogReg.Master.designer.cs">
+    <Compile Include="LogRegRes\MasterLogReg.Master.designer.cs">
       <DependentUpon>MasterLogReg.Master</DependentUpon>
     </Compile>
-    <Compile Include="MerchantRegristration.aspx.cs">
+    <Compile Include="Merchant\MerchantRegristration.aspx.cs">
       <DependentUpon>MerchantRegristration.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="MerchantRegristration.aspx.designer.cs">
+    <Compile Include="Merchant\MerchantRegristration.aspx.designer.cs">
       <DependentUpon>MerchantRegristration.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserLogin.aspx.cs">
+    <Compile Include="Restuarant\ResturantAccountMaster.Master.cs">
+      <DependentUpon>ResturantAccountMaster.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Restuarant\ResturantAccountMaster.Master.designer.cs">
+      <DependentUpon>ResturantAccountMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="LogRegRes\UserLogin.aspx.cs">
       <DependentUpon>UserLogin.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="UserLogin.aspx.designer.cs">
+    <Compile Include="LogRegRes\UserLogin.aspx.designer.cs">
       <DependentUpon>UserLogin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="UsersRegristration.aspx.cs">
+    <Compile Include="LogRegRes\UsersRegristration.aspx.cs">
       <DependentUpon>UsersRegristration.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="UsersRegristration.aspx.designer.cs">
+    <Compile Include="LogRegRes\UsersRegristration.aspx.designer.cs">
       <DependentUpon>UsersRegristration.aspx</DependentUpon>
     </Compile>
-    <Compile Include="ResetPassword.aspx.cs">
+    <Compile Include="LogRegRes\ResetPassword.aspx.cs">
       <DependentUpon>ResetPassword.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ResetPassword.aspx.designer.cs">
+    <Compile Include="LogRegRes\ResetPassword.aspx.designer.cs">
       <DependentUpon>ResetPassword.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Users\UsersMaster.Master.cs">
+      <DependentUpon>UsersMaster.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Users\UsersMaster.Master.designer.cs">
+      <DependentUpon>UsersMaster.Master</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="MasterLogReg.Master" />
+    <Content Include="LogRegRes\MasterLogReg.Master" />
     <Content Include="fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.eot" />
     <Content Include="fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.woff" />
@@ -254,6 +268,8 @@
     <Content Include="vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
     <Content Include="vendor\bootstrap\css\bootstrap.css.map" />
     <Content Include="vendor\bootstrap\css\bootstrap.min.css.map" />
+    <Content Include="Restuarant\ResturantAccountMaster.Master" />
+    <Content Include="Users\UsersMaster.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -267,6 +283,7 @@
       <Name>Utilities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
