--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+TermProject_Template/obj/Debug/TermProject_Template.csprojAssemblyReference.cache
