--- a/TermProject_Template/Web.config
+++ b/TermProject_Template/Web.config
@@ -19,4 +19,11 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.net>
+    <mailSettings>
+      <smtp from="TU_ACCESSNET_ACCOUNT@cis-linux2.temple.edu">
+        <network host="cis-linux2.temple.edu" port="25" userName="TU_ACCESSNET_ACCOUNT" password="TU_ACCESSNET_PASSWORD"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
