--- a/TermProject_Template/TermProject_Template.csproj
+++ b/TermProject_Template/TermProject_Template.csproj
@@ -88,6 +88,7 @@
     <Content Include="images\icons\symbol-01.png" />
     <Content Include="images\Temple-T.png" />
     <Content Include="js\main.js" />
+    <Content Include="LogRegRes\RestaurantRegistration.aspx" />
     <Content Include="Merchant\MerchantRegristration.aspx" />
     <Content Include="LogRegRes\UserLogin.aspx" />
     <Content Include="LogRegRes\UsersRegristration.aspx" />
@@ -154,6 +155,13 @@
     <Compile Include="LogRegRes\MasterLogReg.Master.designer.cs">
       <DependentUpon>MasterLogReg.Master</DependentUpon>
     </Compile>
+    <Compile Include="LogRegRes\RestaurantRegistration.aspx.cs">
+      <DependentUpon>RestaurantRegistration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LogRegRes\RestaurantRegistration.aspx.designer.cs">
+      <DependentUpon>RestaurantRegistration.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Merchant\MerchantRegristration.aspx.cs">
       <DependentUpon>MerchantRegristration.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -162,12 +170,12 @@
       <DependentUpon>MerchantRegristration.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Restuarant\ResturantAccountMaster.Master.cs">
-      <DependentUpon>ResturantAccountMaster.Master</DependentUpon>
+    <Compile Include="Restaurant\RestaurantAccountMaster.Master.cs">
+      <DependentUpon>RestaurantAccountMaster.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Restuarant\ResturantAccountMaster.Master.designer.cs">
-      <DependentUpon>ResturantAccountMaster.Master</DependentUpon>
+    <Compile Include="Restaurant\RestaurantAccountMaster.Master.designer.cs">
+      <DependentUpon>RestaurantAccountMaster.Master</DependentUpon>
     </Compile>
     <Compile Include="LogRegRes\UserLogin.aspx.cs">
       <DependentUpon>UserLogin.aspx</DependentUpon>
@@ -292,7 +300,7 @@
     <Content Include="vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
     <Content Include="vendor\bootstrap\css\bootstrap.css.map" />
     <Content Include="vendor\bootstrap\css\bootstrap.min.css.map" />
-    <Content Include="Restuarant\ResturantAccountMaster.Master" />
+    <Content Include="Restaurant\RestaurantAccountMaster.Master" />
     <Content Include="Users\UsersMaster.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
