--- a/TermProject_Template/TermProject_Template.csproj
+++ b/TermProject_Template/TermProject_Template.csproj
@@ -72,6 +72,7 @@
     <Content Include="CSS\util.css" />
     <Content Include="CustomControls\AccountSettings.ascx" />
     <Content Include="CustomControls\EditWallet.ascx" />
+    <Content Include="CustomControls\WalletBalance.ascx" />
     <Content Include="fonts\font-awesome-4.7.0\css\font-awesome.css" />
     <Content Include="fonts\font-awesome-4.7.0\css\font-awesome.min.css" />
     <Content Include="fonts\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
@@ -146,6 +147,13 @@
     </Compile>
     <Compile Include="CustomControls\EditWallet.ascx.designer.cs">
       <DependentUpon>EditWallet.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="CustomControls\WalletBalance.ascx.cs">
+      <DependentUpon>WalletBalance.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomControls\WalletBalance.ascx.designer.cs">
+      <DependentUpon>WalletBalance.ascx</DependentUpon>
     </Compile>
     <Compile Include="LogRegRes\ForgotPassword.aspx.cs">
       <DependentUpon>ForgotPassword.aspx</DependentUpon>
