removed stuff from temp

--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,4 @@ ASALocalRun/
 .mfractor/
 
 TermProject_Template/obj/Debug/TermProject_Template.csprojAssemblyReference.cache
+TermProject_Template/obj/Debug/TermProject_Template.csproj.CoreCompileInputs.cache
