--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Email.cs" />
     <Compile Include="Fund.cs" />
     <Compile Include="OrderItem.cs" />
+    <Compile Include="Payment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="Validation.cs" />
