--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Connection.cs" />
     <Compile Include="Email.cs" />
     <Compile Include="Fund.cs" />
+    <Compile Include="Merchant.cs" />
     <Compile Include="OrderItem.cs" />
     <Compile Include="Payment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
