--- a/TermProject_Template/TermProject_Template.csproj
+++ b/TermProject_Template/TermProject_Template.csproj
@@ -82,6 +82,7 @@
     <Content Include="fonts\montserrat\OFL.txt" />
     <Content Include="fonts\raleway\OFL.txt" />
     <Content Include="fonts\ubuntu\UFL.txt" />
+    <Content Include="images\icons\fav.png" />
     <Content Include="LogRegRes\ForgotPassword.aspx" />
     <Content Include="images\icons\favicon.ico" />
     <Content Include="images\icons\icon-google.png" />
