--- a/TermProject_Template/Web.config
+++ b/TermProject_Template/Web.config
@@ -9,6 +9,13 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp from="TU_ACCESSNET_ACCOUNT@cis-linux2.temple.edu">
+        <network host="cis-linux2.temple.edu" port="25" userName="tug45415" password="$snoW24Fun"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
