--- a/TermProject_Template/Web.config
+++ b/TermProject_Template/Web.config
@@ -11,8 +11,8 @@
   </system.web>
   <system.net>
     <mailSettings>
-      <smtp from="TU_ACCESSNET_ACCOUNT@cis-linux2.temple.edu">
-        <network host="cis-linux2.temple.edu" port="25" userName="tug45415" password="$snoW24Fun"/>
+      <smtp from="tug33182@cis-linux2.temple.edu">
+        <network host="cis-linux2.temple.edu" port="25" userName="tug33182" password="CodyClyde3221!"/>
       </smtp>
     </mailSettings>
   </system.net>
